[gd_scene load_steps=6 format=3 uid="uid://dlydogsjd8q0v"]

[ext_resource type="Theme" uid="uid://c3kwn6d20ipja" path="res://GUI/styles/dialogue_gui_theme.tres" id="1_u8q88"]
[ext_resource type="Texture2D" uid="uid://bpbquk87c07qo" path="res://GUI/main_menu/back_tpr.png" id="2_as3v0"]
[ext_resource type="Script" path="res://GUI/main_menu/main_menu.gd" id="2_nat64"]
[ext_resource type="PackedScene" uid="uid://ywyg6edx5cuc" path="res://GUI/main_menu/initial_character_selection_panel.tscn" id="4_0au2r"]
[ext_resource type="AudioStream" uid="uid://ck6j63tju4lmb" path="res://main_menu_bg.mp3" id="4_q6ds8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u8q88")
script = ExtResource("2_nat64")

[node name="Camera" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
zoom = Vector2(0.5, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="CenterContainer"]
position = Vector2(960, 540)
scale = Vector2(1.87134, 1.875)
texture = ExtResource("2_as3v0")

[node name="Menu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 59.0
offset_top = 773.0
offset_right = 712.0
offset_bottom = 993.0
theme_override_constants/separation = 20

[node name="Continue" type="Button" parent="Menu"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Продолжить"

[node name="Campaign" type="Button" parent="Menu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Новая кампания"

[node name="Infinite" type="Button" parent="Menu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Новый бесконечный режим"

[node name="Exit" type="Button" parent="Menu"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Выйти"

[node name="SaveMenuComtainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="CharacterSelectionPanel" parent="SaveMenuComtainer" instance=ExtResource("4_0au2r")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q6ds8")
volume_db = -80.0
autoplay = true

[connection signal="pressed" from="Menu/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu/Campaign" to="." method="_on_campaign_pressed"]
[connection signal="pressed" from="Menu/Infinite" to="." method="_on_infinite_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
